修改配置文件 添加 LocalDateTime测试示例

--- a/yudao-module-system/yudao-module-system-biz/src/main/resources/application-local.yaml
+++ b/yudao-module-system/yudao-module-system-biz/src/main/resources/application-local.yaml
@@ -7,12 +7,12 @@ spring:
 #      username: # Nacos 账号
 #      password: # Nacos 密码
       discovery: # 【配置中心】配置项
-        namespace: dev # 命名空间。这里使用 dev 开发环境
+        namespace: ${spring.profiles.active} # 命名空间。这里使用 dev 开发环境
         group: DEFAULT_GROUP # 使用的 Nacos 配置分组，默认为 DEFAULT_GROUP
         metadata:
           version: 1.0.0 # 服务实例的版本号，可用于灰度发布
       config: # 【注册中心】配置项
-        namespace: dev # 命名空间。这里使用 dev 开发环境
+        namespace: ${spring.profiles.active} # 命名空间。这里使用 dev 开发环境
         group: DEFAULT_GROUP # 使用的 Nacos 配置分组，默认为 DEFAULT_GROUP
 
 --- #################### 数据库相关配置 ####################
@@ -170,6 +170,8 @@ yudao:
     enable: false # 本地环境，暂时关闭图片验证码，方便登录等接口的测试
   security:
     mock-enable: true
+    permit-all-urls:
+      - /admin-api/system/test/testLocalDateTime
   access-log: # 访问日志的配置项
     enable: false
   wxa-code:
